[package]
name = "kademlia_mvp"
version = "0.1.0"
edition = "2021"


[lib]
name = "kademlia_mvp"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "*"
# tokio = "*"
tokio = { version = "*", features = ["full"] }
thiserror = "1.0"
sha2 = "0.10"
rand = "0.8"
tempfile = "3.2"
bincode="*"
hex="*"
env_logger ="*"
log="*"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# rand = "0.8"
# tokio = { version = "1.0", features = ["full"] }
# sha2 = "0.9"