[package]
name = "kademlia_mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
futures="*"
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "*"
tempfile = "3.2"
hex="*"
thiserror="*"

[[bin]]
name = "kademlia_mvp"
path = "src/main.rs"

[lib]
name = "kademlia_mvp"
path = "src/lib.rs"