[package]
name = "kademlia_mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
env_logger = "0.11.5"
sha2 = "0.10"
rand = "0.8"
tokio = { version = "1", features = ["full"] }

anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "*"
thiserror = "1.0"
tempfile = "3.2"
hex="*"

async-trait = "0.1"
backtrace = "0.3"

mockall = "*"
toxiproxy_rust="*"
futures="*"

[[bin]]
name = "kademlia_mvp"
path = "src/main.rs"
